--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -8,7 +8,9 @@
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/AppTheme.NoActionBar">
-        <activity android:name=".GameActivity">
+        <activity
+            android:name=".GameActivity"
+            android:screenOrientation="portrait">
 
         </activity>
         <activity android:name=".MenuActivity">
